--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,13 +2,21 @@
 
 <div class="post">
   <h1 class="post-title">{{ .Title }}</h1>
-  <ul id="list">
     {{ range .Data.Pages }}
-    <li>{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }} -
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </li>
-    {{ end }}
-  </ul>
+
+    <div class="post">
+{{ if .Title }}
+        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+        <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}
+{{ else }}
+        <a href="{{ .Permalink }}"><span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</a>
+{{ end }}
+</span>
+        {{ .Content }}
+    </div>
+
+{{ end }}
 </div>
 
 {{ partial "default_foot.html" . }}
+
