--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,17 +2,17 @@
 
 {{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") }}
 
-<div class="posts">
+<div class="posts h-feed">
   {{ range .Paginator.Pages }}
-    <div class="post">
+    <div class="post h-entry">
 {{ if .Title }}
-        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-        <span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}
+        <h1 class="post-title p-name"><a href="{{ .Permalink }}" class="u-url">{{ .Title }}</a></h1>
+        <time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}
 {{ else }}
-        <a href="{{ .Permalink }}"><span class="post-date">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</a>
+        <a href="{{ .Permalink }}" class="u-url"><time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</a>
 {{ end }}
-</span>
-        {{ .Content }}
+</time>
+        <div class="e-content">{{ .Content }}</div>
     </div>
   {{ end }}
 </div>
@@ -32,4 +32,3 @@
 </div>
 
 {{ partial "default_foot.html" . }}
-
