--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <div class="post h-entry">
   {{ if .Title }}<h1 class="post-title p-name">{{ .Title }}</h1>{{ end }}
   <a href="{{ .Permalink }}" class="u-url"><time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">{{ .Site.Params.DateForm | default "Jan 2, 2006" | .Date.Format }}</time></a>
-  <span class="e-content">{{ .Content }}</span>
+  <div class="e-content">{{ .Content }}</div>
 </div>
 
 {{ if .Site.Params.include_conversation }}
