--- a/layouts/partials/default_head.html
+++ b/layouts/partials/default_head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html lang="en-us">
 
   {{ partial "head.html" . }}
 
@@ -20,4 +20,3 @@
       </div>
 
       <div class="container content">
-
